unpackaged/main/default/objects/pse__Team_Schedule_Slot__c/fields/pse__Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Hours__c</fullName>
    <description>The number of hours required per resource in the schedule slot.</description>
    <inlineHelpText>The number of hours required per resource in the schedule slot.</inlineHelpText>
    <label>Hours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>