unpackaged/main/default/objects/pse__Team_Schedule_Slot__c/fields/pse__Team_Schedule__c.field-meta.xml
<CustomField>
    <fullName>pse__Team_Schedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The team schedule associated with the schedule slot.</description>
    <inlineHelpText>The team schedule associated with the schedule slot.</inlineHelpText>
    <label>Team Schedule</label>
    <referenceTo>pse__Team_Schedule__c</referenceTo>
    <relationshipLabel>Team Schedule Slots</relationshipLabel>
    <relationshipName>Team_Schedule_Slots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>