unpackaged/main/default/objects/pse__Team_Schedule_Slot__c/validationRules/pse__Resources_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Resources_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>OR(pse__Resources_Required__c &lt; 1,pse__Resources_Required__c &gt; 99)</errorConditionFormula>
    <errorDisplayField>pse__Resources_Required__c</errorDisplayField>
    <errorMessage>Number of Resources should be between 1 to 99.</errorMessage>
</ValidationRule>